Initial commit: Add hobi.html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <header>
     <h1>Muhammad Taufik Saputra</h1>
     <p>Mahasiswa Teknik Informatika | 2315061077</p>
+    
     <nav>
       <a href="index.html" class="active">Tentang Saya</a>
       <a href="pendidikan.html">Pendidikan</a>
       <a href="keahlian.html">Keahlian</a>
       <a href="proyek.html">Proyek</a>
       <a href="kontak.html">Kontak</a>
+      <a href="hobi.html">Hobi & Minat</a>
     </nav>
   </header>
 
