--- a/keahlian.html
+++ b/keahlian.html
@@ -15,6 +15,7 @@
       <a href="keahlian.html" class="active">Keahlian</a>
       <a href="proyek.html">Proyek</a>
       <a href="kontak.html">Kontak</a>
+      <a href="hobi.html">Hobi & Minat</a>
     </nav>
   </header>
 
